Barista - Code cleanup

--- a/src/app/shared/modules/order-stepper/components/order-stepper/order-stepper.component.html
+++ b/src/app/shared/modules/order-stepper/components/order-stepper/order-stepper.component.html
@@ -12,7 +12,7 @@
         </mat-select>
       </mat-form-field>
       <div>
-        <button mat-button mat-raised-button (click)="setOrder()">Next</button>
+        <button mat-button mat-raised-button (click)="handleOrder()">Next</button>
       </div>
     </form>
   </mat-step>
