Barista - Small style cleanup

--- a/src/app/shared/modules/barista-shop-drinks/components/drink/drink.component.html
+++ b/src/app/shared/modules/barista-shop-drinks/components/drink/drink.component.html
@@ -3,7 +3,7 @@
     <div class="list-holder" *ngFor="let coffee of coffeeList$ | async">
       <mat-grid-tile>
         <h1>{{coffee.name}}</h1>
-        <img mat-card-image src="/assets/img/cup.jpg" alt="Coffee Cup">
+        <img mat-card-image src="/assets/img/basic-coffee.png" alt="Coffee Cup">
       </mat-grid-tile>
     </div>
   </mat-grid-list>
