--- a/src/app/shared/modules/order-stepper/components/order-stepper/order-stepper.component.html
+++ b/src/app/shared/modules/order-stepper/components/order-stepper/order-stepper.component.html
@@ -1,5 +1,5 @@
 <app-drink></app-drink>
-<mat-stepper #stepper>
+<mat-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="coffeesFormGroup">
     <form [formGroup]="coffeesFormGroup">
       <ng-template matStepLabel>Select Your Coffee</ng-template>
@@ -42,10 +42,20 @@
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Ready</ng-template>
-    <p>Enjoy The Best Coffee!</p>
+      <mat-card class="greets-card">
+        <mat-card-content>
+          <div class="greets">
+            <h2>Enjoy the best Coffee!!!</h2>
+            <img mat-card-image src="/assets/img/basic-coffee.png" alt="Coffee Cup">
+          </div>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button mat-raised-button matStepperPrevious>Back</button>
+          <button mat-button mat-raised-button color="accent" (click)="stepper.reset()">Reset</button>
+        </mat-card-actions>
+      </mat-card>
     <div>
-      <button mat-button mat-raised-button matStepperPrevious>Back</button>
-      <button mat-button mat-raised-button color="accent" (click)="stepper.reset()">Reset</button>
+
     </div>
   </mat-step>
 </mat-stepper>
