--- a/src/app/shared/modules/navbar/components/navbar/navbar.component.html
+++ b/src/app/shared/modules/navbar/components/navbar/navbar.component.html
@@ -2,6 +2,7 @@
   <span>Barista Matic</span>
   <span class="barista-spacer"></span>
   <button mat-icon-button class="favorite-icon" aria-label="I love Barista Matic">
+    <mat-icon routerLink="/home">home</mat-icon>
     <mat-icon>favorite</mat-icon>
   </button>
   <button mat-icon-button aria-label="Share Barista Matic">
